--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shoppingcart",
+  "name": "green haven",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +8,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite build && vite preview --host"
   },
   "dependencies": {
